style.css
@font-face {
  font-family: titillium;
  src: url('titillium-bold.woff') format('woff');
  font-weight: bold;
  font-style: normal;
}

html {
  box-sizing: border-box;
  height: 100%;
}

*, *:before, *:after { box-sizing: inherit; }

body, input, select, button {
  font-family: titillium, sans-serif;
  font-weight: bold;
  text-transform: uppercase;
}

body {
  display: flex;
  align-items: stretch;
  min-height: 100%;
  margin: 0;
  background: #202023;
}

#sidebar {
  text-align: center;
  width: 200px;
  padding: 20px;
  border-right: solid 4px #252729;
}

#main {
  display: flex;
  align-items: center;
  justify-content: center;
  flex-grow: 1;
}

#dropzone {
  align-self: stretch;
  width: 100%;
  margin: 40px;
  padding: 20px;
  border: dashed 4px #888888;
  border-radius: 10px;
  color: #cccccc;
  font-size: 32px;
  text-align: center;
}

#canvas {
  max-width: 100%;
  height: auto;
}

#matrigram {
  margin: 10px 0;
  color: #2a9e45;
  font-size: 28px;
}

input {
  -webkit-appearance: none;
  display: block;
  float: left;
  width: 50px;
  height: 30px;
  margin: 1px;
  border: solid 1px #171719;
  border-radius: 0px;
  background: #323235;
  color: #cccccc;
  font-size: 16px;
  text-align: center;
}

button {
  -webkit-appearance: none;
  width: 154px;
  height: 30px;
  margin: 10px 1px;
  padding-bottom: 2px;
  border: solid 1px #171719;
  border-radius: 2px;
  background: linear-gradient(to bottom, #353637, #272829);
  color: #cccccc;
  font-size: 16px;
  text-align: center;
}

#selection {
  -webkit-appearance: none;
  -moz-appearance: none;
  width: 154px;
  height: 30px;
  padding: 2px;
  border: 0;
  background: transparent;
  color: #cccccc;
  font-size: 16px;
  text-align: left;
}

.select-container {
  position: relative;
  width: 154px;
  height: 30px;
  margin: 10px 1px;
  border: solid 1px #171719;
  border-radius: 2px;
  overflow: hidden;
  background: linear-gradient(to bottom, #353637, #272829);
  color: #cccccc;
  font-size: 16px;
  text-align: left;
}

.select-container:before {
  content:'';
  display:block;
  position:absolute;
  right:2px; top:0px;
  width:20px; height:30px;
  background: linear-gradient(to bottom, #353637, #272829);
  pointer-events:none;
}

.select-arrow {
  position: absolute;
  top: 0; bottom: 0;
  right: 8px; left: auto;
  width: 0;
  height: 0;
  margin: auto;
  border-top: 7px solid #cccccc;
  border-left: 5px solid transparent;
  border-right: 5px solid transparent;
  pointer-events: none;
}

